--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 :root{
 	--pointFive: .5em;
+	--flex: flex;
 }
 
 body{
@@ -65,14 +66,14 @@ section{
 
 /*select only direct children and not nested*/
 section > div{
-	display: flex;
+	display: var(--flex);
   justify-content: space-between;
   align-items: center;
   margin-top: 0.8em;
 }
 
 .bruno-info > div{
-	display: flex;
+	display: var(--flex);
   align-items: center;
 }
 
@@ -112,7 +113,7 @@ section > div{
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 215px;
+  width: 13.4rem;
   background-color: hsl(217, 19%, 35%);
   color: hsl(212, 23%, 69%);
   text-align: center;
@@ -122,11 +123,11 @@ section > div{
   z-index: 1;
   bottom: 3.3em;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-52%);
   text-transform: uppercase;
   letter-spacing: 4px;
 
-  display: flex;
+  display: var(--flex);
   justify-content: center;
   gap: 1em;
   align-items: center;
@@ -146,7 +147,7 @@ section > div{
   border-color: hsl(217, 19%, 35%) transparent transparent transparent;
 }
 
-@media only screen and (min-width: 1441px){
+@media only screen and (min-width: 90em){
 
 	.brief{
 		font-size: 1.8vw;
@@ -221,7 +222,7 @@ section > div{
 	}
 
 	.bruno-info > div p {
-		display: flex;
+		display: var(--flex);
   	flex-direction: column;
 	}
 
@@ -246,7 +247,7 @@ section > div{
 
 .mobile-share{
 	background: hsl(217, 19%, 35%);
-	display: flex;
+	display: var(--flex);
   justify-content: space-between;
   padding: 1.3em 2.5em;
   border-bottom-left-radius: var(--pointFive);
@@ -256,7 +257,7 @@ section > div{
 
 .mobile-share div{
 	text-transform: uppercase;
-  display: flex;
+  display: var(--flex);
   gap: 1em;
   align-items: center;
 }
@@ -290,6 +291,11 @@ a:focus{
 	outline: none;
 	border-bottom-style: dotted;
   border-bottom-color: #b3b3b3;
+}
+
+button{
+	border: none;
+	outline: none;
 }
 
 
