--- a/style.css
+++ b/style.css
@@ -72,12 +72,12 @@ section > div{
   margin-top: 0.8em;
 }
 
-.bruno-info > div{
+.bruno-info > div:nth-of-type(1){
 	display: var(--flex);
   align-items: center;
 }
 
-.bruno-info > div p{
+.bruno-info > div:nth-of-type(1) p{
 	margin-left: 1em;
   font-size: .9rem;
 }
@@ -221,7 +221,7 @@ section > div{
 		font-size: .7rem;
 	}
 
-	.bruno-info > div p {
+	.bruno-info > div:nth-of-type(1) p {
 		display: var(--flex);
   	flex-direction: column;
 	}
